# kvoicewalk_Rocm

./: README.md  gui.py  main.py  pyproject.toml  run_rocm.sh
utilities/: audio_processor.py  device_utils.py  fitness_scorer.py  initial_selector.py  kvoicewalk.py  pytorch_sanitizer.py  speech_generator.py  voice_generator.py
