[project]
name = "kvoicewalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "onnxruntime<1.24",
    "pip>=25.1.1",
    "resemblyzer>=0.1.4",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
