[project]
name = "kvoicewalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "onnxruntime<1.24",
    "pip>=25.1.1",
    "pytorch-triton-rocm>=3.5.1 ; sys_platform == 'linux'",
    "resemblyzer>=0.1.4",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "triton-rocm>=3.6.0 ; sys_platform == 'linux'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
triton-rocm = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true
